[package]
name = "orium"
version = "0.1.0"
description = "Rust ORM Placeholder"
license = "MIT"
homepage = "https://github.com/irfius/orium"
repository = "https://github.com/irfius/orium"
authors = ["Irfan Shaikh <irfius@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
